--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,10 @@
+.amount-positive {
+   color: #6d9f38 !important;
+ }
+
+.amount-negative {
+   color: #e26136 !important;
+ }
+
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
