--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,5 +17,14 @@ $spacer: 1rem;
 $card-spacer-y: $spacer * 0.5;
 $card-spacer-x: $spacer * 0.5;
 
+// Make container widths smaller
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 730px,
+  xl: 740px,
+  xxl: 750px
+);
+
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
